2009-10-04  John Dallaway  <john@dallaway.org.uk>

	* cdl/instrument.cdl: Add CYGDBG_KERNEL_INSTRUMENT_MLQ option. Issue
	reported by Pieter-Jan Busschaert.

2009-08-24  John Dallaway  <john@dallaway.org.uk>

	* doc/kernel.sgml: Use "reinterpret_cast" throughout the C++ thread
	entry point example. [ Bugzilla 1000550 ]

2009-05-14  John Dallaway  <john@dallaway.org.uk>

	* src/common/thread.cxx: Use the Cyg_Scheduler::get_current_thread()
	convenience function when instrumenting thread events. Bug reported
	by Pieter-Jan Busschaert.

2008-12-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/tm_basic.cxx (STACK_SIZE): Revert accidental change of
	stack size back to CYGNUM_HAL_STACK_SIZE_MINIMUM. Changed by
	accident at same time as change below of 2006-12-08.

2008-11-18  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* tests/tm_basic.cxx (max): Actually the meaning was right before,
	it was just the name that was wrong. So revert below, and change 
	name to min.

2008-11-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/tm_basic.cxx (max): Was wrong way round. Resolves issue
	1000636.

2008-07-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/thread.inl: Silence some warnings by assigning
	string literals to const char *, not char *.

2007-08-23  Hans Rosenfeld  <rosenfeld@grumpf.hope-2000.org>

	* tests/intr0.cxx, tests/kintr0.c: As suggested by Bart Veer,
	priorities of the interrupts created by intr0 and kintr0 can now
	be overridden by the HAL through HAL_INTR_TEST_PRIO_x constants.

2007-07-02  Gary Thomas  <gary@mlbassoc.com>

	* src/debug/dbg_gdb.cxx: 
	* src/common/thread.cxx (Cyg_IdleThread): Add (char *) casts
	to make GCC/4.2.x happy.

2007-06-11  Nick Garnett  <nickg@ecoscentric.com>

	* tests/klock.c (entry0, entry1): Modify mbox part of test to
	reflect use of plain mbox implementation. The precise ordering of
	events is slightly different.

2007-01-07  Andrew Lunn  <andrew.lunn@ascom.ch>
