@@ -19,10 +19,18 @@ struct instrument_desc_s instrument_desc[] = {
 {"BINSEM",   0x0600},
 {"BINSEM_CLAIM",   1},
 {"BINSEM_POST",   5},
+{"BINSEM_TIMEOUT",   7},
 {"BINSEM_TRY",   4},
 {"BINSEM_WAIT",   2},
 {"BINSEM_WAKE",   6},
 {"BINSEM_WOKE",   3},
+{"BITMAP",   0x0e00},
+{"BITMAP_ADD",   2},
+{"BITMAP_DEQUEUE",   5},
+{"BITMAP_ENQUEUE",   4},
+{"BITMAP_REM",   3},
+{"BITMAP_REMOVE",   6},
+{"BITMAP_SCHEDULE",   1},
 {"CLOCK",   0x0800},
 {"CLOCK_ISR",   3},
 {"CLOCK_TICK_END",   2},
@@ -42,6 +50,14 @@ struct instrument_desc_s instrument_desc[] = {
 {"CONDVAR_WAIT",   1},
 {"CONDVAR_WAKE",   4},
 {"CONDVAR_WOKE",   2},
+{"FLAG",   0x0d00},
+{"FLAG_MASKBITS",   4},
+{"FLAG_POLL",   7},
+{"FLAG_SETBITS",   3},
+{"FLAG_TIMEOUT",   5},
+{"FLAG_WAIT",   1},
+{"FLAG_WAKE",   6},
+{"FLAG_WOKE",   2},
 {"INTR",   0x0300},
 {"INTR_ACK",   14},
 {"INTR_ATTACH",   6},
